# astherus-sol-treasury

./: .gitignore  API.md  Anchor.toml  PROD-README.md  README.md  package-lock.json  package.json
app/: cloud-sol-treasury.ts  main.ts  main_devnet.ts  main_localnet.ts  main_prodnet.ts  main_testnet.ts  sol_treasury.ts  utils.ts
app/secret/dev/: USDC-bank-keypair.json  USDC-bank-publicKey.json  USDC-priceFeed-publicKey.json  USDC-testTokenAccount-publicKey.json  USDC-tokenMint-keypair.json  USDC-tokenMint-publicKey.json  USDC-tokenVault-publicKey.json  USDC-tokenVaultAuthority-publicKey.json  USDT-bank-publicKey.json  USDT-tokenMint-publicKey.json  USDT-tokenVault-publicKey.json  USDT-tokenVaultAuthority-publicKey.json  USDT1-bank-keypair.json  USDT1-bank-publicKey.json  USDT1-priceFeed-publicKey.json  USDT1-testTokenAccount-publicKey.json  USDT1-tokenMint-keypair.json  USDT1-tokenMint-publicKey.json  USDT1-tokenVault-publicKey.json  USDT1-tokenVaultAuthority-publicKey.json  admin-publicKey.json  bank-keypair.json  bank-publicKey.json  cloud_sol_treasury-keypair.json  counterParty-keypair.json  counterParty-publicKey.json  mint-keypair.json  mint-publicKey.json  (+19 more)
programs/cloud-sol-treasury/: Cargo.toml
programs/cloud-sol-treasury/src/: constants.rs  deposit.rs  errors.rs  events.rs  init.rs  lib.rs  sol.rs  token.rs  withdraw.rs
programs/cloud-sol-treasury/src/utils/: ed25519.rs  mod.rs
programs/cloud-sol-treasury/tests/: big_uint_test.rs
tests/: Ed25519.ts  claim_per_hours.ts  cloud-sol-treasury.ts  helper.ts  keccak256_fake.ts  secp256k1_01.ts  secp256k1_02.ts
(+110 files in other folders)
